popup markup start

--- a/app/popup.html
+++ b/app/popup.html
@@ -5,7 +5,19 @@
     <link href="styles/popup.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Popup</h1>
+    <div class="popup-wrapper">
+      <div class="top-panel">
+        <div class="class-icon">
+          <img src="images/i-class-a.svg" alt="Class">
+        </div>
+        <a href="#" class="cog-icon">
+          <img src="images/i-cog.svg" alt="Cog">
+        </a>
+      </div>
+      <div class="ad-trigger-block">
+        
+      </div>
+    </div>
     <script src="scripts/popup.js"></script>
   </body>
 </html>
