--- a/app/popup.html
+++ b/app/popup.html
@@ -5,19 +5,67 @@
     <link href="styles/popup.css" rel="stylesheet">
   </head>
   <body>
-    <div class="popup-wrapper">
-      <div class="top-panel">
-        <div class="class-icon">
+    <div class="ab-popup-wrapper">
+      <div class="ab-top-panel">
+        <div class="ab-icon-class">
           <img src="images/i-class-a.svg" alt="Class">
         </div>
-        <a href="#" class="cog-icon">
+        <a href="#" class="ab-icon-cog js-settings">
           <img src="images/i-cog.svg" alt="Cog">
         </a>
       </div>
-      <div class="ad-trigger-block">
-        
+      <div class="ab-ad-toggle-wrap">
+        <label class="switch toggle">
+          <input type="checkbox">
+          <div class="slider round"></div>
+        </label>
+      </div>
+      <div class="ab-popup-menu">
+        <div class="ab-popup-menu-item">
+          <div class="ab-icon-picker">
+            <img src="images/i-picker.svg" alt="Picker mode">
+          </div>
+          Element picker mode
+        </div>
+        <div class="ab-popup-menu-item">
+          <div class="ab-icon-warning">
+            <img src="images/i-warning.svg" alt="Complain about page">
+          </div>
+          Complain about page
+        </div>
+      </div>
+
+      <div class="ab-bottom-icons">
+        <a href="#" class="ab-bottom-one-icon">
+          <div class="ab-bottom-icon-wrap">
+            <img src="images/i-popups-on.svg" alt="Popups">
+            <span>1</span>
+          </div>
+        </a>
+        <a href="#" class="ab-bottom-one-icon">
+          <div class="ab-bottom-icon-wrap">
+            <img src="images/i-heavy-on.svg" alt="Heavy media content">
+            <span>2</span>
+          </div>
+        </a>
+        <a href="#" class="ab-bottom-one-icon">
+          <div class="ab-bottom-icon-wrap">
+            <img src="images/i-cosmetic-on.svg" alt="Cosmetic">
+            <span>3</span>
+          </div>
+        </a>
+        <a href="#" class="ab-bottom-one-icon">
+          <div class="ab-bottom-icon-wrap">
+            <img src="images/i-fonts-on.svg" alt="Fonts">
+            <span>4</span>
+          </div>
+        </a>
       </div>
     </div>
+    <div class="js-show-sources ab-show-sources ab-sources-hidden">
+
+    </div>
+    <script src="scripts/ublock/udom.js"></script>
     <script src="scripts/popup.js"></script>
   </body>
 </html>
