rename to Mass Fair Ads

--- a/app/popup.html
+++ b/app/popup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="styles/popup.css" rel="stylesheet">
-    <title>Mass Ad Block</title>
+    <title>Mass Fair Ads</title>
   </head>
   <body>
     <div style="display: none !important;">
