--- a/app/popup.html
+++ b/app/popup.html
@@ -62,7 +62,7 @@
       </div>
       <div class="ab-ad-toggle-wrap">
         <label class="switch toggle">
-          <input type="checkbox">
+          <input type="checkbox" id="adSwitcher">
           <div class="slider round"></div>
         </label>
       </div>
