--- a/app/popup.html
+++ b/app/popup.html
@@ -56,9 +56,9 @@
         <div class="ab-icon-class">
           <img src="images/i-class-a.svg" alt="Class">
         </div>
-        <span class="ab-icon-cog js-settings">
+        <a href="settings.html" class="ab-icon-cog js-settings">
           <img src="images/i-cog.svg" alt="Cog">
-        </span>
+        </a>
       </div>
       <div class="ab-ad-toggle-wrap">
         <label class="switch toggle">
