styles for my rules lists

--- a/app/settings.html
+++ b/app/settings.html
@@ -218,8 +218,8 @@
                                 <button type="button" class="btn btn-default" id="revertButton" data-i18n="rulesRevert"></button>
                             </div>
                         </div>
-                        <div class="rulesContainer">
-                            <ul class="list-unstyled"></ul>
+                        <div class="rulesContainer rules-сontainer">
+                            <ul class="list-unstyled striped"></ul>
                         </div>
                     </div>
                     <div class="col-md-6 pane right">
@@ -235,7 +235,7 @@
                         </div>
                         <div class="rulesContainer rules-сontainer">
                             <textarea spellcheck="false" class="hidden-textarea" autofocus></textarea>
-                            <ul class="list-unstyled"></ul>
+                            <ul class="list-unstyled striped"></ul>
                         </div>
                     </div>
 
