ads class to popup

--- a/app/popup.html
+++ b/app/popup.html
@@ -56,6 +56,7 @@
         <div class="ab-icon-class">
           <img src="images/i-class-a.svg" alt="Class">
         </div>
+        <div class="js-ads-class-temp" style="float: left; height: 60px; line-height: 60px; color: #aaa; text-transform: capitalize; padding: 0 10px;"></div>
         <a href="settings.html" class="ab-icon-cog js-settings">
           <img src="images/i-cog.svg" alt="Cog">
         </a>
